# Motion-Sketch

./: .gitignore  Cargo.toml  Description.md
motion-sketch/: Cargo.toml  LICENSE
motion-sketch/src/: main.rs
motion-sketch/ui/: app-window.slint
src/: lib.rs  main.rs
