[package]
name = "motion-sketch"
version = "0.1.0"
edition = "2021"

[dependencies]
winit = { version = "0.29", features = ["rwh_05"] }
env_logger = "0.11.6"
log = "0.4"
wgpu = "23.0.1"
pollster = "*"
# Iced UI
iced = { version = "0.13.1", features = ["wgpu"] }
iced_native = "0.10.3"
iced_winit = "0.13.0"
